--- a/mycs.css
+++ b/mycs.css
@@ -3,6 +3,15 @@
     border: dashed 2px  red;
     color: #448039;
 }
+div#title {
+
+    border: solid 2px  red;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 150px;
+    margin-left: 80px;
+}
 div {
 
     border: solid 2px  green;
@@ -12,18 +21,24 @@ div {
     margin-right: 150px;
     margin-left: 80px;
 }
-
-select {
+div#kuku {
+    border: solid 2px  red;
+}
+select#sel1 {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 15px;
-    margin-left: 8px;
+    margin-left: 20px;
+
 }
 
 input {
 
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-right: 15px;
-    margin-left: 8px;
+    margin-right: 30px;
+    margin-left: 20px;
+}
+p {
+    text-align:left;
 }
