--- a/mycs.css
+++ b/mycs.css
@@ -3,21 +3,71 @@
     border: dashed 2px  red;
     color: #448039;
 }
+#group {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 120px;
+    margin-left: 60px;
+}
+#xxx {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 150px;
+    margin-left: 140px;
+}
+#yyy {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 120px;
+    margin-left: 100px;
+}
+#l1,#l2,#l3,#l4,#l5,#l6 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 12px;
+    text-align: left;
+    border: 3px solid green;
+    display: inline-block;
+    width: 140px;
+    text-align: right;
+    background: #f9ff64;
+}
+#myGroup {
+    display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 50px;
+    margin-left: 10px;
+}
+#add {
+    display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 20px;
+    margin-left: 25px;
+}
+#select_time1,#select_time2,#select_time3,#select_time4,#select_time5,#select_time6,#select_group{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 div#title {
-
+    color: beige;
+    background: gray;
     border: solid 2px  red;
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    padding: 10px 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     margin-right: 150px;
     margin-left: 80px;
+    border-radius: 5px 5px 5px 5px;
 }
 div {
 
     border: solid 2px  green;
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     margin-right: 150px;
     margin-left: 80px;
 }
